; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_graphics.c_gx_fill_gradient.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/libs/vgfont/extr_graphics.c_gx_fill_gradient.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@VCOS_SUCCESS = common dso_local global i32 0, align 4
@VCOS_EINVAL = common dso_local global i32 0, align 4
@GRAPHICS_RESOURCE_WIDTH = common dso_local global i64 0, align 8
@GRAPHICS_RESOURCE_HEIGHT = common dso_local global i64 0, align 8
@VG_PAINT_LINEAR_GRADIENT = common dso_local global i32 0, align 4
@VG_FILL_PATH = common dso_local global i32 0, align 4
@VG_PATH_FORMAT_STANDARD = common dso_local global i32 0, align 4
@VG_PATH_DATATYPE_S_32 = common dso_local global i32 0, align 4
@VG_PATH_CAPABILITY_ALL = common dso_local global i32 0, align 4
@VCOS_ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gx_fill_gradient(%struct.TYPE_4__* %0, i64 %1, i64 %2, i64 %3, i64 %4, i64 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32*, align 8
  %16 = alloca [4 x double], align 16
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i64 %3, i64* %12, align 8
  store i64 %4, i64* %13, align 8
  store i64 %5, i64* %14, align 8
  store i32* %6, i32** %15, align 8
  %21 = bitcast [4 x double]* %16 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %21, i8 0, i64 32, i1 false)
  %22 = load i32*, i32** %15, align 8
  %23 = ptrtoint i32* %22 to i32
  store i32 %23, i32* %17, align 4
  %24 = load i32, i32* @VCOS_SUCCESS, align 4
  store i32 %24, i32* %20, align 4
  %25 = load i32, i32* %17, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %29, label %27

27:                                               ; preds = %7
  %28 = load i32, i32* @VCOS_EINVAL, align 4
  store i32 %28, i32* %8, align 4
  br label %93

29:                                               ; preds = %7
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %31 = call i32 @gx_priv_save(i32* %19, %struct.TYPE_4__* %30)
  %32 = load i64, i64* %12, align 8
  %33 = load i64, i64* @GRAPHICS_RESOURCE_WIDTH, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %29
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  store i64 %38, i64* %12, align 8
  br label %39

39:                                               ; preds = %35, %29
  %40 = load i64, i64* %13, align 8
  %41 = load i64, i64* @GRAPHICS_RESOURCE_HEIGHT, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %47

43:                                               ; preds = %39
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 1
  %46 = load i64, i64* %45, align 8
  store i64 %46, i64* %13, align 8
  br label %47

47:                                               ; preds = %43, %39
  %48 = load i64, i64* %12, align 8
  %49 = sitofp i64 %48 to double
  %50 = getelementptr inbounds [4 x double], [4 x double]* %16, i64 0, i64 2
  store double %49, double* %50, align 16
  %51 = load i32, i32* %17, align 4
  %52 = load i32, i32* @VG_PAINT_LINEAR_GRADIENT, align 4
  %53 = getelementptr inbounds [4 x double], [4 x double]* %16, i64 0, i64 0
  %54 = call i32 @vgSetParameterfv(i32 %51, i32 %52, i32 4, double* %53)
  %55 = load i32, i32* %17, align 4
  %56 = load i32, i32* @VG_FILL_PATH, align 4
  %57 = call i32 @vgSetPaint(i32 %55, i32 %56)
  %58 = load i32, i32* @VG_PATH_FORMAT_STANDARD, align 4
  %59 = load i32, i32* @VG_PATH_DATATYPE_S_32, align 4
  %60 = load i32, i32* @VG_PATH_CAPABILITY_ALL, align 4
  %61 = call i32 @vgCreatePath(i32 %58, i32 %59, double 1.000000e+00, double 0.000000e+00, i32 8, i32 8, i32 %60)
  store i32 %61, i32* %18, align 4
  %62 = load i32, i32* %18, align 4
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %66, label %64

64:                                               ; preds = %47
  %65 = load i32, i32* @VCOS_ENOMEM, align 4
  store i32 %65, i32* %20, align 4
  br label %90

66:                                               ; preds = %47
  %67 = load i32, i32* %18, align 4
  %68 = load i64, i64* %10, align 8
  %69 = sitofp i64 %68 to double
  %70 = load i64, i64* %11, align 8
  %71 = sitofp i64 %70 to double
  %72 = load i64, i64* %12, align 8
  %73 = sitofp i64 %72 to double
  %74 = load i64, i64* %13, align 8
  %75 = sitofp i64 %74 to double
  %76 = load i64, i64* %14, align 8
  %77 = sitofp i64 %76 to double
  %78 = load i64, i64* %14, align 8
  %79 = sitofp i64 %78 to double
  %80 = call i32 @vguRoundRect(i32 %67, double %69, double %71, double %73, double %75, double %77, double %79)
  %81 = load i32, i32* %18, align 4
  %82 = load i32, i32* @VG_FILL_PATH, align 4
  %83 = call i32 @vgDrawPath(i32 %81, i32 %82)
  %84 = load i32, i32* %18, align 4
  %85 = call i32 @vgDestroyPath(i32 %84)
  %86 = call i64 (...) @vgGetError()
  %87 = icmp eq i64 %86, 0
  %88 = zext i1 %87 to i32
  %89 = call i32 @vcos_assert(i32 %88)
  br label %90

90:                                               ; preds = %66, %64
  %91 = call i32 @gx_priv_restore(i32* %19)
  %92 = load i32, i32* %20, align 4
  store i32 %92, i32* %8, align 4
  br label %93

93:                                               ; preds = %90, %27
  %94 = load i32, i32* %8, align 4
  ret i32 %94
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @gx_priv_save(i32*, %struct.TYPE_4__*) #2

declare dso_local i32 @vgSetParameterfv(i32, i32, i32, double*) #2

declare dso_local i32 @vgSetPaint(i32, i32) #2

declare dso_local i32 @vgCreatePath(i32, i32, double, double, i32, i32, i32) #2

declare dso_local i32 @vguRoundRect(i32, double, double, double, double, double, double) #2

declare dso_local i32 @vgDrawPath(i32, i32) #2

declare dso_local i32 @vgDestroyPath(i32) #2

declare dso_local i32 @vcos_assert(i32) #2

declare dso_local i64 @vgGetError(...) #2

declare dso_local i32 @gx_priv_restore(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
